# networkunit

./: .gitignore  AUTHORS.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  environment-docs.yml  environment.yml  pyproject.toml  readthedocs.yml  requirements-docs.txt  requirements.txt  setup.py  temp_v0.2_release_notes.md  test_array_example.py
capabilities/: __init__.py
doc/: authors.rst  citing.rst  conf.py  examples.rst  index.rst  installation.rst  introduction.rst  joint_test.ipynb  models.rst  releases.rst  scores.rst  tests.rst
examples/: basic_test.ipynb  demonstrate_M2M_X2X.ipynb  eigenangle_score.ipynb  index.ipynb  joint_test.ipynb
examples/.ipynb_checkpoints/: demonstrate_M2M_X2X-checkpoint.ipynb
networkunit/: __init__.py  utils.py
networkunit/capabilities/: ProducesListsOfSpikeTrains.py  ProducesSpikeTrains.py  __init__.py  cap_ProducesCovariances.py  cap_ProducesSpikeTrains.py  cap_ProducesWaveFronts.py
networkunit/models/: __init__.py  loaded_data.py  loaded_spiketrains.py  model_experimental_data.py  model_loaded_data.py  model_nest_simulation.py  model_resting_state_data.py  model_simulation_data.py  model_spiketrain_data.py  model_stochastic_activity.py  nest_simulation.py  spiketrain_data.py  stochastic_activity.py
networkunit/plots/: __init__.py  eigenvector_loads.py  plot_covar_pdf.py  (+8 more)
plots/: plot_covar_pdf_ei.py  plot_eigenvalues.py  plot_eigenvector_loads.py  plot_mu_std_table.py  plot_rasterplot.py  plot_sample_histogram.py
scores/: score_LeveneScore.py  score_kl_divergence.py
tests/: test_correlation_test.py  test_covariance_test.py  test_two_sample_test.py
(+65 files in other folders)
