[project]
name = "networkunit"
description = "A SciUnit library for validation testing of spiking networks."
version = "0.2.1"
readme = "README.rst"
authors = [
    { name = "NetworkUnit authors and contributors", email = "robin.gutzen@outlook.com" }
]

requires-python = ">=3.8"
dependencies = [
    "nbconvert == 7.12.0", #remove when updating sciunit version
    "sciunit == 0.2.7",
    "elephant >= 0.7.0",
    "neo >= 0.9",
    "networkx >= 2.1",
    "tabulate >= 0.8.2",
    "seaborn >= 0.8.1",
    "numpy >= 1.15.3",
    "opencv-python"
]

[metadata]
description-file = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD-3-Clause",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
"Homepage" = "https://github.com/INM-6/networkunit"
"Bug Tracker" = "https://github.com/INM-6/networkunit/issues"

[project.scripts]

[project.optional-dependencies]
dev = [
    "black",
    "bump2version",
    "flake8",
    "mypy",
    "pre-commit",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-black",
    "pytest-cov",
    "pytest-flake8",
    "pytest-mypy",
    "pytest-pydocstyle",
    "pytest-pylint",
    "pytest-xdist",
]
doc = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "numpydoc>=1.1.0",
    "sphinx-tabs>=1.3.0",
    "sphinx-argparse>=0.4.0",
    "pygments",
    "recommonmark",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
